# tdd-conway

./: .gitignore  CMakeLists.txt  Makefile
lib/: conway.cpp  conway.hpp
src/: board.cpp  driver.cpp
unit_tests/: tests.cpp
